# Sentiment_analysis_comments

./: .gitignore  README.md  bhashini_lang_detect.py  clean_and_date_format.py  gemini_analysis.py  generate_dashboard_bhashini.py  generate_dashboard_sarvam.py  generate_dashboard_top2.py  generate_wordcloud.py  main.py  pyproject.toml  sarvam_lang_detect.py  sentiment_analysis_with_confusion_matrix.py  top2_category_summary.py
HLD_docs/: high_level_documentation.md  pipeline_documentation.md
prompt/: negative_comment_prompt.yaml  negative_sumamry_action_items.yaml  positive_comment_prompt.yaml  positive_summary.yaml
ui/template/: dashboard_template_v1.html  dashboard_template_v1_top2.html
