[project]
name = "sentiment-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fasttext-wheel>=0.9.2",
    "google-genai>=1.63.0",
    "googletrans>=4.0.2",
    "lingua-language-detector>=2.1.1",
    "pandas>=2.0.3",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "sarvamai>=0.1.25",
    "scikit-learn>=1.8.0",
    "tdqm>=0.0.1",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.0",
    "translators>=6.0.4",
]
